refactoring column and list

--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "build": "webpack --mode production",
     "lint": "eslint src/"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": "eslint"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
